; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/cavium/extr_octopci_bus_space.c_octopci_bs_w_1.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/cavium/extr_octopci_bus_space.c_octopci_bs_w_1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @octopci_bs_w_1(i8* %0, i64 %1, i64 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i64, i64* %6, align 8
  %10 = load i64, i64* %7, align 8
  %11 = add nsw i64 %9, %10
  %12 = load i32, i32* %8, align 4
  %13 = call i32 @wr8(i64 %11, i32 %12)
  ret void
}

declare dso_local i32 @wr8(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
